# Swift-Forms

./: README.md
backend/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt  utils.py
frontend/: content-script.js  manifest.json  package-lock.json  package.json  service-worker.js  sidepanel.html  sidepanel.js
